# regex_lab_zhang-zy24

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  run.sh
homework/: lib_char.h
homework/CYK-algorithm/: CYK.h
homework/DFA-accept/: accept.h
homework/DFA-minimization/: minimization.h
homework/DFA-to-expression/: converter.h
homework/ParseTree-to-eNFA/: converter.h  merge_NFA.h
homework/expression-parser/: parser.h  to_polish.h
homework/subset-construction/: subset_construction.h
model/: CFG.h  COE.h  DFA.h  NFA.h  consts.h  parse_tree.h
testcases/: input.txt  input_CYK.txt  make_CYK_cases.py  make_cases.py
tests/: CYK_test.cpp  all.cpp  lib_char.h  std_test_all.cpp  test.cpp
